# MathWiz

./: .gitignore  repo.x
MathWiz/: CMakeLists.txt  main.cpp
MathWiz/include/: Bootloader.hxx  LockedUnorderedMap.hxx  MathProblem.hxx  RAMFS.hxx  definitions.hxx  globals.hxx  server.hxx  statistics.hxx
MathWiz/lib/devlib/include/: filesystem.hxx
MathWiz/lib/dlib/all/: source.cpp
MathWiz/res/: filecache.dat~  index.html  main.css  main.js
MathWiz/source/: Bootloader.cxx  MathProblem.cxx  ProblemGen.cxx  RAMFS.cxx  alg1.alg  server.cxx  statistics.cxx
build-MathWiz-Desktop-Default/: CMakeCache.txt  Makefile  MathWiz  MathWiz.cbp  cmake_install.cmake
win/MathWiz_nt/: MathWiz_nt.sln
win/MathWiz_nt/MathWiz_nt/: MathWiz_nt.vcxproj  MathWiz_nt.vcxproj.filters
win/MathWiz_nt/MathWiz_nt/Debug/: vc120.idb
win/MathWiz_nt/MathWiz_nt/Debug/MathWiz_nt.tlog/: CL.read.1.tlog  CL.write.1.tlog  MathWiz_nt.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win/MathWiz_nt/MathWiz_nt/Release/MathWiz_nt.tlog/: CL.read.1.tlog  CL.write.1.tlog  MathWiz_nt.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win/MathWiz_nt/MathWiz_nt/res/: main.css  main.js
win/MathWiz_nt/MathWiz_nt/stats/: reqcount2.stat
