project(MathWiz)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -pthread -fopenmp -Wall")
file(GLOB include_files "include/*.hxx")
aux_source_directory(source source_files)
add_executable(${PROJECT_NAME} lib/dlib/all/source.cpp main.cpp ${include_files} ${source_files})
find_package(Threads REQUIRED)
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
