project(MathWiz)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -pthread -Wall -O3")
file(GLOB include_files "include/*.hxx")
file(GLOB include_files_devlib "lib/devlib/include/*.hxx")
file(GLOB resource_files "res/*")
aux_source_directory(source source_files)
aux_source_directory(lib/devlib/source source_files_devlib)
add_executable(${PROJECT_NAME} lib/dlib/all/source.cpp main.cpp ${include_files} ${source_files} ${source_files_devlib} ${include_files_devlib})
find_package(Threads REQUIRED)
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
file(COPY res DESTINATION .)
